--- a/templates/upload.html
+++ b/templates/upload.html
@@ -17,6 +17,7 @@
   <body>
     <nav class="nav-bar">
         <div class="nav-brand">
+            <img src="/static/images/logo.jpg" alt="FoxEngine Logo" class="nav-logo" />
             FoxEngine
             <span class="nav-title">Upload</span>
         </div>
