--- a/templates/upload.html
+++ b/templates/upload.html
@@ -55,6 +55,10 @@
             <label for="delimiterInput">Delimiter:</label>
             <input type="text" id="delimiterInput" maxlength="1" placeholder="," title="Enter delimiter character" style="width: 30px;" />
           </div>
+          <div class="input-group" id="multivalueGroup" style="display: none;">
+            <label for="multivalueInput">Multivalue Separator:</label>
+            <input type="text" id="multivalueInput" maxlength="1" placeholder="," title="Enter multivalue separator character" style="width: 30px;" />
+          </div>
         </div>
         <div id="uploadStatus"></div>
         <div id="uploadProgress" class="progress-bar" style="display: none;">
