--- a/templates/search.html
+++ b/templates/search.html
@@ -34,6 +34,9 @@
             <a href="/files" class="icon-btn" title="View Files">
                 <i class="fas fa-folder-open"></i>
             </a>
+            <a href="/tools" class="icon-btn" title="Tools">
+                <i class="fas fa-tools"></i>
+            </a>
             <a href="/upload" class="icon-btn" title="Upload">
                 <i class="fas fa-upload"></i>
             </a>
